--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = bsti_nessus/tests
+testpaths = bsti_nessus/tests tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
